# webr.bundle

./: .gitignore  Cargo.toml  DESCRIPTION  NAMESPACE  README.md
R/: build.R  install.R  serve.R
man/: build.Rd  build_and_serve.Rd  install_from_source.Rd  serve.Rd
src/: bundle.rs  cli.rs  download.rs  lib.rs  main.rs  renv.rs  repo.rs
src/html/: mod.rs
