[package]
name = "webR_bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["stream"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
